--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Balduino Fernando",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --transpile-only src/app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
