--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
