--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/http-status-codes": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
@@ -20,6 +21,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
   }
