--- a/package.json
+++ b/package.json
@@ -6,24 +6,30 @@
   "author": "Balduino Fernando",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/app.ts"
+    "dev": "ts-node-dev --transpile-only src/index.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/http-status-codes": "^1.2.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/jest": "^29.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "jest": "^29.4.3",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
+    "ts-jest": "^29.0.5",
     "yup": "^1.0.0"
   }
 }
