--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
@@ -21,12 +22,15 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "http-status-codes": "^2.2.0",
     "jest": "^29.4.3",
+    "jsonwebtoken": "^9.0.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "ts-jest": "^29.0.5",
