Intalled Knex and Initials Configurations

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ APP_ENV=dev
 APP_PORT = 3000
 APP_TOKEN=
 APP_REFRESH_TOKEN=
+SQLITE_FILE_NAME=src/database/banco.sqlite
+APP_ENV=development #development,test,production
