--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "bcrypt": "^5.1.0",
+    "better-sqlite3": "^8.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "http-status-codes": "^2.2.0",
     "jest": "^29.4.3",
     "jsonwebtoken": "^9.0.0",
+    "knex": "^2.4.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "ts-jest": "^29.0.5",
