--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-APP_ENV=dev
+NODE_ENV=development #development,test,production
 APP_PORT = 3000
 APP_TOKEN=
 APP_REFRESH_TOKEN=
 SQLITE_FILE_NAME=src/database/banco.sqlite
-APP_ENV=development #development,test,production
